feat: add website social link and bump version to 0.5.0
Add a new Website social link above YouTube in the sidebar, wire it to open https://www.xlieferant.dev/, and give it a distinct blue/cyan button style. Update UI version display to 0.5.0 and bump app version in Tauri config and Cargo manifest. Extend button translations to include the new website label (DE marked [NEEDS TRANSLATION]).

Files changed:
- src/index.html: add Website button above YouTube; update version button to 0.5.0
- src/main.js: register websiteBtn and openUrl handler
- src/styles.css: add .nav-action.website styles and hover effect
- src-tauri/tauri.conf.json: bump version to 0.5.0
- src-tauri/Cargo.toml: bump package version to 0.5.0
- src-tauri/Cargo.lock: lockfile updated
- src-tauri/locales/en.json, de.json, es.json, fr.json: add buttons.website key (DE as [NEEDS TRANSLATION])

--- a/ets2-tool/src-tauri/locales/en.json
+++ b/ets2-tool/src-tauri/locales/en.json
@@ -11,6 +11,7 @@
             "settings": "⚙️Settings"
       },
       "buttons": {
+            "website": "Website",
             "youtube": "🔴 YouTube",
             "patreon": "⚠️ Patreon",
             "github": "⚠️ GitHub"
