--- a/ets2-tool/src-tauri/locales/fr.json
+++ b/ets2-tool/src-tauri/locales/fr.json
@@ -11,6 +11,7 @@
             "settings": "⚙️ Paramètres"
       },
       "buttons": {
+            "website": "Website",
             "youtube": "🔴 YouTube",
             "patreon": "⚠️ Patreon",
             "github": "⚠️ GitHub"
